# python-fit-videoclip

./: .gitignore  README.md  fit_videoclip.py  requirements.txt  setup.cfg
src/fit_videoclip/: __init__.py
