[metadata]
name = fit-videoclip
version = 0.0.1
description = Video clip generator from FIT files
long_description = file: README.md
classifiers =
    Environment :: Console
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
author = Hiroyuki OYAMA
author_email = oyama@sportsengineering.co.jp

[options]
package_dir=
    =src
packages=find:
include_package_data = False
install_requires=
    fitparse
    gizeh
    moviepy
    pandas

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    fit-videoclip = fit_videoclip:main
